fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 .mainSection {
   background-color: #e6e6e6;
   height: fit-content;
-  overflow: hidden;
 }
 
 .findHeader {
